PODS-7035 updated css to fix issue with page overflow on radio legend

--- a/app/assets/stylesheets/pensionsschemefrontend-app.scss
+++ b/app/assets/stylesheets/pensionsschemefrontend-app.scss
@@ -50,3 +50,13 @@
         }
     }
 }
+
+.govuk-form-group {
+    .govuk-fieldset {
+        .govuk-fieldset__legend {
+            &.govuk-visually-hidden {
+                white-space: normal!important;
+            }
+        }
+    }
+}
